reports/k8s-network-run3-iptables-start.txt
# Generated by iptables-save v1.8.11 (nf_tables) on Tue Sep  8 08:02:21 2026
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:KUBE-IPTABLES-HINT - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-PROXY-CANARY - [0:0]
COMMIT
# Completed on Tue Sep  8 08:02:21 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Tue Sep  8 08:02:21 2026
*filter
:INPUT ACCEPT [28:9113]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [35:5510]
:FLANNEL-FWD - [0:0]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-NWPLCY-AKWE4DLHTBVECDBE - [0:0]
:KUBE-NWPLCY-COMMON - [0:0]
:KUBE-NWPLCY-DEFAULT - [0:0]
:KUBE-NWPLCY-HEOZOEOOTRIGT6NX - [0:0]
:KUBE-NWPLCY-JWQO5XINBFIT6HQ5 - [0:0]
:KUBE-NWPLCY-QCYLZWUVHE3KAP6V - [0:0]
:KUBE-NWPLCY-QV4KXOHF42ZY5HTE - [0:0]
:KUBE-NWPLCY-SNOWN2YFOO536QD6 - [0:0]
:KUBE-NWPLCY-SOWDTZ52LT6Y7HPC - [0:0]
:KUBE-NWPLCY-V2SQ7ZAXXMNWX52M - [0:0]
:KUBE-NWPLCY-XO7APKZKQW6RAHD7 - [0:0]
:KUBE-NWPLCY-YVOSL7QCRJHTBOY4 - [0:0]
:KUBE-POD-FW-B6B3JDR2V7IJU2QH - [0:0]
:KUBE-POD-FW-DUTMJ3JNUJIRHOYP - [0:0]
:KUBE-POD-FW-FQHGTNN2G7C3WHYT - [0:0]
:KUBE-POD-FW-I6RJLO45R4M4HV4O - [0:0]
:KUBE-POD-FW-RBN5XDRHSR3ZJAKN - [0:0]
:KUBE-POD-FW-RQWTECYINS4CY75L - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-PROXY-FIREWALL - [0:0]
:KUBE-ROUTER-FORWARD - [0:0]
:KUBE-ROUTER-INPUT - [0:0]
:KUBE-ROUTER-OUTPUT - [0:0]
:KUBE-SERVICES - [0:0]
[41:18905] -A INPUT -m comment --comment "kube-router netpol - 4IA2OSFRMVNDXBVV" -j KUBE-ROUTER-INPUT
[10:7763] -A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
[28:9113] -A INPUT -m comment --comment "kubernetes health check service ports" -j KUBE-NODEPORTS
[10:7763] -A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
[28:9113] -A INPUT -j KUBE-FIREWALL
[0:0] -A INPUT -m comment --comment "KUBE-ROUTER rule to explicitly ACCEPT traffic that comply to network policies" -m mark --mark 0x20000/0x20000 -j ACCEPT
[27:10752] -A FORWARD -m comment --comment "kube-router netpol - TEMCG2JMHZYE7H7T" -j KUBE-ROUTER-FORWARD
[0:0] -A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
[0:0] -A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
[0:0] -A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
[0:0] -A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
[0:0] -A FORWARD -m comment --comment "KUBE-ROUTER rule to explicitly ACCEPT traffic that comply to network policies" -m mark --mark 0x20000/0x20000 -j ACCEPT
[0:0] -A FORWARD -m comment --comment "flanneld forward" -j FLANNEL-FWD
[53:9922] -A OUTPUT -m comment --comment "kube-router netpol - VEAAIY32XVBHCSCY" -j KUBE-ROUTER-OUTPUT
[17:4339] -A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
[17:4339] -A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
[35:5510] -A OUTPUT -j KUBE-FIREWALL
[0:0] -A OUTPUT -m comment --comment "KUBE-ROUTER rule to explicitly ACCEPT traffic that comply to network policies" -m mark --mark 0x20000/0x20000 -j ACCEPT
[0:0] -A FLANNEL-FWD -s 10.42.0.0/16 -m comment --comment "flanneld forward" -j ACCEPT
[0:0] -A FLANNEL-FWD -d 10.42.0.0/16 -m comment --comment "flanneld forward" -j ACCEPT
[0:0] -A KUBE-FIREWALL ! -s 127.0.0.0/8 -d 127.0.0.0/8 -m comment --comment "block incoming localnet connections" -m conntrack ! --ctstate RELATED,ESTABLISHED,DNAT -j DROP
[0:0] -A KUBE-FORWARD -m conntrack --ctstate INVALID -m nfacct --nfacct-name  ct_state_invalid_dropped_pkts -j DROP
[0:0] -A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
[0:0] -A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
[0:0] -A KUBE-NWPLCY-AKWE4DLHTBVECDBE -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name worker-to-vault namespace evidscope" -m set --match-set KUBE-SRC-YBPC23AMUE6W6SOV src -m set --match-set KUBE-DST-BONCJFVJX4BY7OBJ dst -m tcp --dport 8080 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-AKWE4DLHTBVECDBE -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name worker-to-vault namespace evidscope" -m set --match-set KUBE-SRC-YBPC23AMUE6W6SOV src -m set --match-set KUBE-DST-BONCJFVJX4BY7OBJ dst -m tcp --dport 8080 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-AKWE4DLHTBVECDBE -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name worker-to-vault namespace evidscope" -m set --match-set KUBE-SRC-YBPC23AMUE6W6SOV src -m set --match-set KUBE-DST-CIP5QFOCOFHCSWTW dst -m udp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-AKWE4DLHTBVECDBE -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name worker-to-vault namespace evidscope" -m set --match-set KUBE-SRC-YBPC23AMUE6W6SOV src -m set --match-set KUBE-DST-CIP5QFOCOFHCSWTW dst -m udp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-AKWE4DLHTBVECDBE -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name worker-to-vault namespace evidscope" -m set --match-set KUBE-SRC-YBPC23AMUE6W6SOV src -m set --match-set KUBE-DST-CIP5QFOCOFHCSWTW dst -m tcp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-AKWE4DLHTBVECDBE -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name worker-to-vault namespace evidscope" -m set --match-set KUBE-SRC-YBPC23AMUE6W6SOV src -m set --match-set KUBE-DST-CIP5QFOCOFHCSWTW dst -m tcp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-AKWE4DLHTBVECDBE -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix "DROP by policy evidscope/worker-to-vault" --nflog-group 100
[0:0] -A KUBE-NWPLCY-COMMON -m comment --comment "\"rule to drop invalid state for pod\"" -m conntrack --ctstate INVALID -j DROP
[56:24836] -A KUBE-NWPLCY-COMMON -m comment --comment "\"rule for stateful firewall for pod\"" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
[0:0] -A KUBE-NWPLCY-COMMON -p icmp -m comment --comment "allow icmp echo requests" -m icmp --icmp-type 8 -j ACCEPT
[0:0] -A KUBE-NWPLCY-COMMON -p icmp -m comment --comment "allow icmp destination unreachable messages" -m icmp --icmp-type 3 -j ACCEPT
[0:0] -A KUBE-NWPLCY-COMMON -p icmp -m comment --comment "allow icmp time exceeded messages" -m icmp --icmp-type 11 -j ACCEPT
[0:0] -A KUBE-NWPLCY-DEFAULT -m comment --comment "rule to mark traffic matching a network policy" -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-HEOZOEOOTRIGT6NX -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-collector-egress namespace evidscope" -m set --match-set KUBE-SRC-T3YD2U4L3MNDOOFS src -m set --match-set KUBE-DST-PZAYO66JQ6SNQ4NX dst -m tcp --dport 8080 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-HEOZOEOOTRIGT6NX -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-collector-egress namespace evidscope" -m set --match-set KUBE-SRC-T3YD2U4L3MNDOOFS src -m set --match-set KUBE-DST-PZAYO66JQ6SNQ4NX dst -m tcp --dport 8080 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-HEOZOEOOTRIGT6NX -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-collector-egress namespace evidscope" -m set --match-set KUBE-SRC-T3YD2U4L3MNDOOFS src -m set --match-set KUBE-DST-D4YCSTDNVVDUR2ZR dst -m udp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-HEOZOEOOTRIGT6NX -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-collector-egress namespace evidscope" -m set --match-set KUBE-SRC-T3YD2U4L3MNDOOFS src -m set --match-set KUBE-DST-D4YCSTDNVVDUR2ZR dst -m udp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-HEOZOEOOTRIGT6NX -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-collector-egress namespace evidscope" -m set --match-set KUBE-SRC-T3YD2U4L3MNDOOFS src -m set --match-set KUBE-DST-D4YCSTDNVVDUR2ZR dst -m tcp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-HEOZOEOOTRIGT6NX -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-collector-egress namespace evidscope" -m set --match-set KUBE-SRC-T3YD2U4L3MNDOOFS src -m set --match-set KUBE-DST-D4YCSTDNVVDUR2ZR dst -m tcp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-HEOZOEOOTRIGT6NX -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix "DROP by policy evidscope/load-collector-egress" --nflog-group 100
[0:0] -A KUBE-NWPLCY-JWQO5XINBFIT6HQ5 -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name audit-to-vault namespace evidscope" -m set --match-set KUBE-SRC-2UVKRC2XNADWW7R4 src -m set --match-set KUBE-DST-SF5RGCOMQA7SYOU4 dst -m tcp --dport 8080 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-JWQO5XINBFIT6HQ5 -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name audit-to-vault namespace evidscope" -m set --match-set KUBE-SRC-2UVKRC2XNADWW7R4 src -m set --match-set KUBE-DST-SF5RGCOMQA7SYOU4 dst -m tcp --dport 8080 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-JWQO5XINBFIT6HQ5 -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name audit-to-vault namespace evidscope" -m set --match-set KUBE-SRC-2UVKRC2XNADWW7R4 src -m set --match-set KUBE-DST-L5ZYQJAEGUKJWZKM dst -m udp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-JWQO5XINBFIT6HQ5 -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name audit-to-vault namespace evidscope" -m set --match-set KUBE-SRC-2UVKRC2XNADWW7R4 src -m set --match-set KUBE-DST-L5ZYQJAEGUKJWZKM dst -m udp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-JWQO5XINBFIT6HQ5 -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name audit-to-vault namespace evidscope" -m set --match-set KUBE-SRC-2UVKRC2XNADWW7R4 src -m set --match-set KUBE-DST-L5ZYQJAEGUKJWZKM dst -m tcp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-JWQO5XINBFIT6HQ5 -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name audit-to-vault namespace evidscope" -m set --match-set KUBE-SRC-2UVKRC2XNADWW7R4 src -m set --match-set KUBE-DST-L5ZYQJAEGUKJWZKM dst -m tcp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-JWQO5XINBFIT6HQ5 -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix "DROP by policy evidscope/audit-to-vault" --nflog-group 100
[0:0] -A KUBE-NWPLCY-QCYLZWUVHE3KAP6V -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name audit-approved-clients namespace evidscope" -m set --match-set KUBE-SRC-IS56WIFOHTYWVP3G src -m set --match-set KUBE-DST-AFOEM5HPEU5TKOGI dst -m tcp --dport 8080 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-QCYLZWUVHE3KAP6V -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name audit-approved-clients namespace evidscope" -m set --match-set KUBE-SRC-IS56WIFOHTYWVP3G src -m set --match-set KUBE-DST-AFOEM5HPEU5TKOGI dst -m tcp --dport 8080 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-QCYLZWUVHE3KAP6V -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix "DROP by policy evidscope/audit-approved-clients" --nflog-group 100
[0:0] -A KUBE-NWPLCY-QV4KXOHF42ZY5HTE -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name ingress-approved-clients namespace evidscope" -m set --match-set KUBE-SRC-T4YHXYUWHQZECS4G src -m set --match-set KUBE-DST-INL664SO6BTDBP65 dst -m tcp --dport 8080 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-QV4KXOHF42ZY5HTE -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name ingress-approved-clients namespace evidscope" -m set --match-set KUBE-SRC-T4YHXYUWHQZECS4G src -m set --match-set KUBE-DST-INL664SO6BTDBP65 dst -m tcp --dport 8080 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-QV4KXOHF42ZY5HTE -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix "DROP by policy evidscope/ingress-approved-clients" --nflog-group 100
[0:0] -A KUBE-NWPLCY-SNOWN2YFOO536QD6 -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix "DROP by policy evidscope/deny-all" --nflog-group 100
[0:0] -A KUBE-NWPLCY-SOWDTZ52LT6Y7HPC -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name network-probe-dns-only namespace evidscope" -m set --match-set KUBE-SRC-6OSE3RQWSL4UZNIP src -m set --match-set KUBE-DST-FWXKYXRYYIMBVP4Y dst -m udp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-SOWDTZ52LT6Y7HPC -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name network-probe-dns-only namespace evidscope" -m set --match-set KUBE-SRC-6OSE3RQWSL4UZNIP src -m set --match-set KUBE-DST-FWXKYXRYYIMBVP4Y dst -m udp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-SOWDTZ52LT6Y7HPC -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name network-probe-dns-only namespace evidscope" -m set --match-set KUBE-SRC-6OSE3RQWSL4UZNIP src -m set --match-set KUBE-DST-FWXKYXRYYIMBVP4Y dst -m tcp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-SOWDTZ52LT6Y7HPC -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name network-probe-dns-only namespace evidscope" -m set --match-set KUBE-SRC-6OSE3RQWSL4UZNIP src -m set --match-set KUBE-DST-FWXKYXRYYIMBVP4Y dst -m tcp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-SOWDTZ52LT6Y7HPC -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix "DROP by policy evidscope/network-probe-dns-only" --nflog-group 100
[0:0] -A KUBE-NWPLCY-V2SQ7ZAXXMNWX52M -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name vault-from-gateways-workers namespace evidscope" -m set --match-set KUBE-SRC-BRGRGDZIDFEXE6JZ src -m set --match-set KUBE-DST-4XXWWAZPRGHLHL63 dst -m tcp --dport 8080 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-V2SQ7ZAXXMNWX52M -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name vault-from-gateways-workers namespace evidscope" -m set --match-set KUBE-SRC-BRGRGDZIDFEXE6JZ src -m set --match-set KUBE-DST-4XXWWAZPRGHLHL63 dst -m tcp --dport 8080 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-V2SQ7ZAXXMNWX52M -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix "DROP by policy evidscope/vault-from-gateways-workers" --nflog-group 100
[0:0] -A KUBE-NWPLCY-XO7APKZKQW6RAHD7 -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-auditor-egress namespace evidscope" -m set --match-set KUBE-SRC-B5ETJTBAQ73VARWN src -m set --match-set KUBE-DST-5P757CCH32DCC3CT dst -m tcp --dport 8080 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-XO7APKZKQW6RAHD7 -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-auditor-egress namespace evidscope" -m set --match-set KUBE-SRC-B5ETJTBAQ73VARWN src -m set --match-set KUBE-DST-5P757CCH32DCC3CT dst -m tcp --dport 8080 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-XO7APKZKQW6RAHD7 -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-auditor-egress namespace evidscope" -m set --match-set KUBE-SRC-B5ETJTBAQ73VARWN src -m set --match-set KUBE-DST-YKLIJWUY5Y2CDNAM dst -m udp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-XO7APKZKQW6RAHD7 -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-auditor-egress namespace evidscope" -m set --match-set KUBE-SRC-B5ETJTBAQ73VARWN src -m set --match-set KUBE-DST-YKLIJWUY5Y2CDNAM dst -m udp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-XO7APKZKQW6RAHD7 -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-auditor-egress namespace evidscope" -m set --match-set KUBE-SRC-B5ETJTBAQ73VARWN src -m set --match-set KUBE-DST-YKLIJWUY5Y2CDNAM dst -m tcp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-XO7APKZKQW6RAHD7 -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name load-auditor-egress namespace evidscope" -m set --match-set KUBE-SRC-B5ETJTBAQ73VARWN src -m set --match-set KUBE-DST-YKLIJWUY5Y2CDNAM dst -m tcp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-XO7APKZKQW6RAHD7 -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix "DROP by policy evidscope/load-auditor-egress" --nflog-group 100
[0:0] -A KUBE-NWPLCY-YVOSL7QCRJHTBOY4 -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name ingress-to-vault namespace evidscope" -m set --match-set KUBE-SRC-255LHNX7S33PW476 src -m set --match-set KUBE-DST-YIIKUC74WBMVIS3V dst -m tcp --dport 8080 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-YVOSL7QCRJHTBOY4 -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name ingress-to-vault namespace evidscope" -m set --match-set KUBE-SRC-255LHNX7S33PW476 src -m set --match-set KUBE-DST-YIIKUC74WBMVIS3V dst -m tcp --dport 8080 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-YVOSL7QCRJHTBOY4 -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name ingress-to-vault namespace evidscope" -m set --match-set KUBE-SRC-255LHNX7S33PW476 src -m set --match-set KUBE-DST-PLQ4F7Z45PUMPHPK dst -m udp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-YVOSL7QCRJHTBOY4 -p udp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name ingress-to-vault namespace evidscope" -m set --match-set KUBE-SRC-255LHNX7S33PW476 src -m set --match-set KUBE-DST-PLQ4F7Z45PUMPHPK dst -m udp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-YVOSL7QCRJHTBOY4 -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name ingress-to-vault namespace evidscope" -m set --match-set KUBE-SRC-255LHNX7S33PW476 src -m set --match-set KUBE-DST-PLQ4F7Z45PUMPHPK dst -m tcp --dport 53 -j MARK --set-xmark 0x10000/0x10000
[0:0] -A KUBE-NWPLCY-YVOSL7QCRJHTBOY4 -p tcp -m comment --comment "rule to ACCEPT traffic from source pods to dest pods selected by policy name ingress-to-vault namespace evidscope" -m set --match-set KUBE-SRC-255LHNX7S33PW476 src -m set --match-set KUBE-DST-PLQ4F7Z45PUMPHPK dst -m tcp --dport 53 -m mark --mark 0x10000/0x10000 -j RETURN
[0:0] -A KUBE-NWPLCY-YVOSL7QCRJHTBOY4 -m comment --comment "rule to log dropped traffic" -m limit --limit 10/min --limit-burst 10 -m mark ! --mark 0x10000/0x10000 -j NFLOG --nflog-prefix "DROP by policy evidscope/ingress-to-vault" --nflog-group 100
[39:16860] -A KUBE-POD-FW-B6B3JDR2V7IJU2QH -m comment --comment "common bi-directional traffic policy rules" -j KUBE-NWPLCY-COMMON
[1:60] -A KUBE-POD-FW-B6B3JDR2V7IJU2QH -d 10.42.3.4/32 -m comment --comment "rule to permit the traffic traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
[0:0] -A KUBE-POD-FW-B6B3JDR2V7IJU2QH -s 10.42.3.4/32 -m comment --comment "run through nw policy worker-to-vault" -j KUBE-NWPLCY-AKWE4DLHTBVECDBE
[0:0] -A KUBE-POD-FW-B6B3JDR2V7IJU2QH -m comment --comment "run through nw policy deny-all" -j KUBE-NWPLCY-SNOWN2YFOO536QD6
[0:0] -A KUBE-POD-FW-B6B3JDR2V7IJU2QH -m comment --comment "rule to log dropped traffic POD name:worker-84b7d46d7c-jtd6f namespace: evidscope" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
[0:0] -A KUBE-POD-FW-B6B3JDR2V7IJU2QH -m comment --comment "rule to REJECT traffic destined for POD name:worker-84b7d46d7c-jtd6f namespace: evidscope" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
[0:0] -A KUBE-POD-FW-B6B3JDR2V7IJU2QH -j MARK --set-xmark 0x0/0x10000
[0:0] -A KUBE-POD-FW-B6B3JDR2V7IJU2QH -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
[0:0] -A KUBE-POD-FW-DUTMJ3JNUJIRHOYP -m comment --comment "common bi-directional traffic policy rules" -j KUBE-NWPLCY-COMMON
[0:0] -A KUBE-POD-FW-DUTMJ3JNUJIRHOYP -d 10.42.3.11/32 -m comment --comment "rule to permit the traffic traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
[0:0] -A KUBE-POD-FW-DUTMJ3JNUJIRHOYP -m comment --comment "run through nw policy deny-all" -j KUBE-NWPLCY-SNOWN2YFOO536QD6
[0:0] -A KUBE-POD-FW-DUTMJ3JNUJIRHOYP -s 10.42.3.11/32 -m comment --comment "run through nw policy network-probe-dns-only" -j KUBE-NWPLCY-SOWDTZ52LT6Y7HPC
[0:0] -A KUBE-POD-FW-DUTMJ3JNUJIRHOYP -m comment --comment "rule to log dropped traffic POD name:network-probe-unlabeled-run3-25cwv namespace: evidscope" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
[0:0] -A KUBE-POD-FW-DUTMJ3JNUJIRHOYP -m comment --comment "rule to REJECT traffic destined for POD name:network-probe-unlabeled-run3-25cwv namespace: evidscope" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
[0:0] -A KUBE-POD-FW-DUTMJ3JNUJIRHOYP -j MARK --set-xmark 0x0/0x10000
[0:0] -A KUBE-POD-FW-DUTMJ3JNUJIRHOYP -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
[0:0] -A KUBE-POD-FW-FQHGTNN2G7C3WHYT -m comment --comment "common bi-directional traffic policy rules" -j KUBE-NWPLCY-COMMON
[0:0] -A KUBE-POD-FW-FQHGTNN2G7C3WHYT -d 10.42.3.9/32 -m comment --comment "rule to permit the traffic traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
[0:0] -A KUBE-POD-FW-FQHGTNN2G7C3WHYT -m comment --comment "run through nw policy deny-all" -j KUBE-NWPLCY-SNOWN2YFOO536QD6
[0:0] -A KUBE-POD-FW-FQHGTNN2G7C3WHYT -s 10.42.3.9/32 -m comment --comment "run through nw policy load-auditor-egress" -j KUBE-NWPLCY-XO7APKZKQW6RAHD7
[0:0] -A KUBE-POD-FW-FQHGTNN2G7C3WHYT -s 10.42.3.9/32 -m comment --comment "run through nw policy network-probe-dns-only" -j KUBE-NWPLCY-SOWDTZ52LT6Y7HPC
[0:0] -A KUBE-POD-FW-FQHGTNN2G7C3WHYT -m comment --comment "rule to log dropped traffic POD name:network-probe-auditor-run3-nrzq6 namespace: evidscope" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
[0:0] -A KUBE-POD-FW-FQHGTNN2G7C3WHYT -m comment --comment "rule to REJECT traffic destined for POD name:network-probe-auditor-run3-nrzq6 namespace: evidscope" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
[0:0] -A KUBE-POD-FW-FQHGTNN2G7C3WHYT -j MARK --set-xmark 0x0/0x10000
[0:0] -A KUBE-POD-FW-FQHGTNN2G7C3WHYT -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
[0:0] -A KUBE-POD-FW-I6RJLO45R4M4HV4O -m comment --comment "common bi-directional traffic policy rules" -j KUBE-NWPLCY-COMMON
[0:0] -A KUBE-POD-FW-I6RJLO45R4M4HV4O -d 10.42.3.7/32 -m comment --comment "rule to permit the traffic traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
[0:0] -A KUBE-POD-FW-I6RJLO45R4M4HV4O -s 10.42.3.7/32 -m comment --comment "run through nw policy ingress-to-vault" -j KUBE-NWPLCY-YVOSL7QCRJHTBOY4
[0:0] -A KUBE-POD-FW-I6RJLO45R4M4HV4O -m comment --comment "run through nw policy deny-all" -j KUBE-NWPLCY-SNOWN2YFOO536QD6
[0:0] -A KUBE-POD-FW-I6RJLO45R4M4HV4O -d 10.42.3.7/32 -m comment --comment "run through nw policy ingress-approved-clients" -j KUBE-NWPLCY-QV4KXOHF42ZY5HTE
[0:0] -A KUBE-POD-FW-I6RJLO45R4M4HV4O -m comment --comment "rule to log dropped traffic POD name:ingress-7bc7bdbfdf-zgvgw namespace: evidscope" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
[0:0] -A KUBE-POD-FW-I6RJLO45R4M4HV4O -m comment --comment "rule to REJECT traffic destined for POD name:ingress-7bc7bdbfdf-zgvgw namespace: evidscope" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
[0:0] -A KUBE-POD-FW-I6RJLO45R4M4HV4O -j MARK --set-xmark 0x0/0x10000
[0:0] -A KUBE-POD-FW-I6RJLO45R4M4HV4O -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
[19:8096] -A KUBE-POD-FW-RBN5XDRHSR3ZJAKN -m comment --comment "common bi-directional traffic policy rules" -j KUBE-NWPLCY-COMMON
[1:60] -A KUBE-POD-FW-RBN5XDRHSR3ZJAKN -d 10.42.3.3/32 -m comment --comment "rule to permit the traffic traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
[0:0] -A KUBE-POD-FW-RBN5XDRHSR3ZJAKN -m comment --comment "run through nw policy deny-all" -j KUBE-NWPLCY-SNOWN2YFOO536QD6
[0:0] -A KUBE-POD-FW-RBN5XDRHSR3ZJAKN -d 10.42.3.3/32 -m comment --comment "run through nw policy audit-approved-clients" -j KUBE-NWPLCY-QCYLZWUVHE3KAP6V
[0:0] -A KUBE-POD-FW-RBN5XDRHSR3ZJAKN -s 10.42.3.3/32 -m comment --comment "run through nw policy audit-to-vault" -j KUBE-NWPLCY-JWQO5XINBFIT6HQ5
[0:0] -A KUBE-POD-FW-RBN5XDRHSR3ZJAKN -m comment --comment "rule to log dropped traffic POD name:audit-86789b9bb9-2jsd9 namespace: evidscope" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
[0:0] -A KUBE-POD-FW-RBN5XDRHSR3ZJAKN -m comment --comment "rule to REJECT traffic destined for POD name:audit-86789b9bb9-2jsd9 namespace: evidscope" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
[0:0] -A KUBE-POD-FW-RBN5XDRHSR3ZJAKN -j MARK --set-xmark 0x0/0x10000
[0:0] -A KUBE-POD-FW-RBN5XDRHSR3ZJAKN -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
[0:0] -A KUBE-POD-FW-RQWTECYINS4CY75L -m comment --comment "common bi-directional traffic policy rules" -j KUBE-NWPLCY-COMMON
[0:0] -A KUBE-POD-FW-RQWTECYINS4CY75L -d 10.42.3.10/32 -m comment --comment "rule to permit the traffic traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
[0:0] -A KUBE-POD-FW-RQWTECYINS4CY75L -s 10.42.3.10/32 -m comment --comment "run through nw policy load-collector-egress" -j KUBE-NWPLCY-HEOZOEOOTRIGT6NX
[0:0] -A KUBE-POD-FW-RQWTECYINS4CY75L -m comment --comment "run through nw policy deny-all" -j KUBE-NWPLCY-SNOWN2YFOO536QD6
[0:0] -A KUBE-POD-FW-RQWTECYINS4CY75L -s 10.42.3.10/32 -m comment --comment "run through nw policy network-probe-dns-only" -j KUBE-NWPLCY-SOWDTZ52LT6Y7HPC
[0:0] -A KUBE-POD-FW-RQWTECYINS4CY75L -m comment --comment "rule to log dropped traffic POD name:network-probe-collector-run3-4vdx7 namespace: evidscope" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
[0:0] -A KUBE-POD-FW-RQWTECYINS4CY75L -m comment --comment "rule to REJECT traffic destined for POD name:network-probe-collector-run3-4vdx7 namespace: evidscope" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
[0:0] -A KUBE-POD-FW-RQWTECYINS4CY75L -j MARK --set-xmark 0x0/0x10000
[0:0] -A KUBE-POD-FW-RQWTECYINS4CY75L -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
[2:695] -A KUBE-ROUTER-FORWARD -d 10.42.3.3/32 -m comment --comment "rule to jump traffic destined to POD name:audit-86789b9bb9-2jsd9 namespace: evidscope to chain KUBE-POD-FW-RBN5XDRHSR3ZJAKN" -j KUBE-POD-FW-RBN5XDRHSR3ZJAKN
[0:0] -A KUBE-ROUTER-FORWARD -d 10.42.3.3/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:audit-86789b9bb9-2jsd9 namespace: evidscope to chain KUBE-POD-FW-RBN5XDRHSR3ZJAKN" -j KUBE-POD-FW-RBN5XDRHSR3ZJAKN
[2:329] -A KUBE-ROUTER-FORWARD -s 10.42.3.3/32 -m comment --comment "rule to jump traffic from POD name:audit-86789b9bb9-2jsd9 namespace: evidscope to chain KUBE-POD-FW-RBN5XDRHSR3ZJAKN" -j KUBE-POD-FW-RBN5XDRHSR3ZJAKN
[0:0] -A KUBE-ROUTER-FORWARD -s 10.42.3.3/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:audit-86789b9bb9-2jsd9 namespace: evidscope to chain KUBE-POD-FW-RBN5XDRHSR3ZJAKN" -j KUBE-POD-FW-RBN5XDRHSR3ZJAKN
[0:0] -A KUBE-ROUTER-FORWARD -d 10.42.3.7/32 -m comment --comment "rule to jump traffic destined to POD name:ingress-7bc7bdbfdf-zgvgw namespace: evidscope to chain KUBE-POD-FW-I6RJLO45R4M4HV4O" -j KUBE-POD-FW-I6RJLO45R4M4HV4O
[0:0] -A KUBE-ROUTER-FORWARD -d 10.42.3.7/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:ingress-7bc7bdbfdf-zgvgw namespace: evidscope to chain KUBE-POD-FW-I6RJLO45R4M4HV4O" -j KUBE-POD-FW-I6RJLO45R4M4HV4O
[0:0] -A KUBE-ROUTER-FORWARD -s 10.42.3.7/32 -m comment --comment "rule to jump traffic from POD name:ingress-7bc7bdbfdf-zgvgw namespace: evidscope to chain KUBE-POD-FW-I6RJLO45R4M4HV4O" -j KUBE-POD-FW-I6RJLO45R4M4HV4O
[0:0] -A KUBE-ROUTER-FORWARD -s 10.42.3.7/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:ingress-7bc7bdbfdf-zgvgw namespace: evidscope to chain KUBE-POD-FW-I6RJLO45R4M4HV4O" -j KUBE-POD-FW-I6RJLO45R4M4HV4O
[0:0] -A KUBE-ROUTER-FORWARD -d 10.42.3.10/32 -m comment --comment "rule to jump traffic destined to POD name:network-probe-collector-run3-4vdx7 namespace: evidscope to chain KUBE-POD-FW-RQWTECYINS4CY75L" -j KUBE-POD-FW-RQWTECYINS4CY75L
[0:0] -A KUBE-ROUTER-FORWARD -d 10.42.3.10/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:network-probe-collector-run3-4vdx7 namespace: evidscope to chain KUBE-POD-FW-RQWTECYINS4CY75L" -j KUBE-POD-FW-RQWTECYINS4CY75L
[0:0] -A KUBE-ROUTER-FORWARD -s 10.42.3.10/32 -m comment --comment "rule to jump traffic from POD name:network-probe-collector-run3-4vdx7 namespace: evidscope to chain KUBE-POD-FW-RQWTECYINS4CY75L" -j KUBE-POD-FW-RQWTECYINS4CY75L
[0:0] -A KUBE-ROUTER-FORWARD -s 10.42.3.10/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:network-probe-collector-run3-4vdx7 namespace: evidscope to chain KUBE-POD-FW-RQWTECYINS4CY75L" -j KUBE-POD-FW-RQWTECYINS4CY75L
[0:0] -A KUBE-ROUTER-FORWARD -d 10.42.3.11/32 -m comment --comment "rule to jump traffic destined to POD name:network-probe-unlabeled-run3-25cwv namespace: evidscope to chain KUBE-POD-FW-DUTMJ3JNUJIRHOYP" -j KUBE-POD-FW-DUTMJ3JNUJIRHOYP
[0:0] -A KUBE-ROUTER-FORWARD -d 10.42.3.11/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:network-probe-unlabeled-run3-25cwv namespace: evidscope to chain KUBE-POD-FW-DUTMJ3JNUJIRHOYP" -j KUBE-POD-FW-DUTMJ3JNUJIRHOYP
[0:0] -A KUBE-ROUTER-FORWARD -s 10.42.3.11/32 -m comment --comment "rule to jump traffic from POD name:network-probe-unlabeled-run3-25cwv namespace: evidscope to chain KUBE-POD-FW-DUTMJ3JNUJIRHOYP" -j KUBE-POD-FW-DUTMJ3JNUJIRHOYP
[0:0] -A KUBE-ROUTER-FORWARD -s 10.42.3.11/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:network-probe-unlabeled-run3-25cwv namespace: evidscope to chain KUBE-POD-FW-DUTMJ3JNUJIRHOYP" -j KUBE-POD-FW-DUTMJ3JNUJIRHOYP
[8:6568] -A KUBE-ROUTER-FORWARD -d 10.42.3.4/32 -m comment --comment "rule to jump traffic destined to POD name:worker-84b7d46d7c-jtd6f namespace: evidscope to chain KUBE-POD-FW-B6B3JDR2V7IJU2QH" -j KUBE-POD-FW-B6B3JDR2V7IJU2QH
[0:0] -A KUBE-ROUTER-FORWARD -d 10.42.3.4/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:worker-84b7d46d7c-jtd6f namespace: evidscope to chain KUBE-POD-FW-B6B3JDR2V7IJU2QH" -j KUBE-POD-FW-B6B3JDR2V7IJU2QH
[15:3160] -A KUBE-ROUTER-FORWARD -s 10.42.3.4/32 -m comment --comment "rule to jump traffic from POD name:worker-84b7d46d7c-jtd6f namespace: evidscope to chain KUBE-POD-FW-B6B3JDR2V7IJU2QH" -j KUBE-POD-FW-B6B3JDR2V7IJU2QH
[0:0] -A KUBE-ROUTER-FORWARD -s 10.42.3.4/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:worker-84b7d46d7c-jtd6f namespace: evidscope to chain KUBE-POD-FW-B6B3JDR2V7IJU2QH" -j KUBE-POD-FW-B6B3JDR2V7IJU2QH
[0:0] -A KUBE-ROUTER-FORWARD -d 10.42.3.9/32 -m comment --comment "rule to jump traffic destined to POD name:network-probe-auditor-run3-nrzq6 namespace: evidscope to chain KUBE-POD-FW-FQHGTNN2G7C3WHYT" -j KUBE-POD-FW-FQHGTNN2G7C3WHYT
[0:0] -A KUBE-ROUTER-FORWARD -d 10.42.3.9/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:network-probe-auditor-run3-nrzq6 namespace: evidscope to chain KUBE-POD-FW-FQHGTNN2G7C3WHYT" -j KUBE-POD-FW-FQHGTNN2G7C3WHYT
[0:0] -A KUBE-ROUTER-FORWARD -s 10.42.3.9/32 -m comment --comment "rule to jump traffic from POD name:network-probe-auditor-run3-nrzq6 namespace: evidscope to chain KUBE-POD-FW-FQHGTNN2G7C3WHYT" -j KUBE-POD-FW-FQHGTNN2G7C3WHYT
[0:0] -A KUBE-ROUTER-FORWARD -s 10.42.3.9/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:network-probe-auditor-run3-nrzq6 namespace: evidscope to chain KUBE-POD-FW-FQHGTNN2G7C3WHYT" -j KUBE-POD-FW-FQHGTNN2G7C3WHYT
[0:0] -A KUBE-ROUTER-INPUT -d 10.43.0.0/16 -m comment --comment "allow traffic to primary/secondary cluster IP range - EKROEGTNIJ3AP3LC" -j RETURN
[0:0] -A KUBE-ROUTER-INPUT -p tcp -m comment --comment "allow LOCAL TCP traffic to node ports - LR7XO7NXDBGQJD2M" -m addrtype --dst-type LOCAL -m multiport --dports 30000:32767 -j RETURN
[0:0] -A KUBE-ROUTER-INPUT -p udp -m comment --comment "allow LOCAL UDP traffic to node ports - 76UCBPIZNGJNWNUZ" -m addrtype --dst-type LOCAL -m multiport --dports 30000:32767 -j RETURN
[6:4866] -A KUBE-ROUTER-INPUT -s 10.42.3.3/32 -m comment --comment "rule to jump traffic from POD name:audit-86789b9bb9-2jsd9 namespace: evidscope to chain KUBE-POD-FW-RBN5XDRHSR3ZJAKN" -j KUBE-POD-FW-RBN5XDRHSR3ZJAKN
[0:0] -A KUBE-ROUTER-INPUT -s 10.42.3.7/32 -m comment --comment "rule to jump traffic from POD name:ingress-7bc7bdbfdf-zgvgw namespace: evidscope to chain KUBE-POD-FW-I6RJLO45R4M4HV4O" -j KUBE-POD-FW-I6RJLO45R4M4HV4O
[0:0] -A KUBE-ROUTER-INPUT -s 10.42.3.10/32 -m comment --comment "rule to jump traffic from POD name:network-probe-collector-run3-4vdx7 namespace: evidscope to chain KUBE-POD-FW-RQWTECYINS4CY75L" -j KUBE-POD-FW-RQWTECYINS4CY75L
[0:0] -A KUBE-ROUTER-INPUT -s 10.42.3.11/32 -m comment --comment "rule to jump traffic from POD name:network-probe-unlabeled-run3-25cwv namespace: evidscope to chain KUBE-POD-FW-DUTMJ3JNUJIRHOYP" -j KUBE-POD-FW-DUTMJ3JNUJIRHOYP
[7:4926] -A KUBE-ROUTER-INPUT -s 10.42.3.4/32 -m comment --comment "rule to jump traffic from POD name:worker-84b7d46d7c-jtd6f namespace: evidscope to chain KUBE-POD-FW-B6B3JDR2V7IJU2QH" -j KUBE-POD-FW-B6B3JDR2V7IJU2QH
[0:0] -A KUBE-ROUTER-INPUT -s 10.42.3.9/32 -m comment --comment "rule to jump traffic from POD name:network-probe-auditor-run3-nrzq6 namespace: evidscope to chain KUBE-POD-FW-FQHGTNN2G7C3WHYT" -j KUBE-POD-FW-FQHGTNN2G7C3WHYT
[9:2206] -A KUBE-ROUTER-OUTPUT -d 10.42.3.3/32 -m comment --comment "rule to jump traffic destined to POD name:audit-86789b9bb9-2jsd9 namespace: evidscope to chain KUBE-POD-FW-RBN5XDRHSR3ZJAKN" -j KUBE-POD-FW-RBN5XDRHSR3ZJAKN
[0:0] -A KUBE-ROUTER-OUTPUT -s 10.42.3.3/32 -m comment --comment "rule to jump traffic from POD name:audit-86789b9bb9-2jsd9 namespace: evidscope to chain KUBE-POD-FW-RBN5XDRHSR3ZJAKN" -j KUBE-POD-FW-RBN5XDRHSR3ZJAKN
[0:0] -A KUBE-ROUTER-OUTPUT -d 10.42.3.7/32 -m comment --comment "rule to jump traffic destined to POD name:ingress-7bc7bdbfdf-zgvgw namespace: evidscope to chain KUBE-POD-FW-I6RJLO45R4M4HV4O" -j KUBE-POD-FW-I6RJLO45R4M4HV4O
[0:0] -A KUBE-ROUTER-OUTPUT -s 10.42.3.7/32 -m comment --comment "rule to jump traffic from POD name:ingress-7bc7bdbfdf-zgvgw namespace: evidscope to chain KUBE-POD-FW-I6RJLO45R4M4HV4O" -j KUBE-POD-FW-I6RJLO45R4M4HV4O
[0:0] -A KUBE-ROUTER-OUTPUT -d 10.42.3.10/32 -m comment --comment "rule to jump traffic destined to POD name:network-probe-collector-run3-4vdx7 namespace: evidscope to chain KUBE-POD-FW-RQWTECYINS4CY75L" -j KUBE-POD-FW-RQWTECYINS4CY75L
[0:0] -A KUBE-ROUTER-OUTPUT -s 10.42.3.10/32 -m comment --comment "rule to jump traffic from POD name:network-probe-collector-run3-4vdx7 namespace: evidscope to chain KUBE-POD-FW-RQWTECYINS4CY75L" -j KUBE-POD-FW-RQWTECYINS4CY75L
[0:0] -A KUBE-ROUTER-OUTPUT -d 10.42.3.11/32 -m comment --comment "rule to jump traffic destined to POD name:network-probe-unlabeled-run3-25cwv namespace: evidscope to chain KUBE-POD-FW-DUTMJ3JNUJIRHOYP" -j KUBE-POD-FW-DUTMJ3JNUJIRHOYP
[0:0] -A KUBE-ROUTER-OUTPUT -s 10.42.3.11/32 -m comment --comment "rule to jump traffic from POD name:network-probe-unlabeled-run3-25cwv namespace: evidscope to chain KUBE-POD-FW-DUTMJ3JNUJIRHOYP" -j KUBE-POD-FW-DUTMJ3JNUJIRHOYP
[9:2206] -A KUBE-ROUTER-OUTPUT -d 10.42.3.4/32 -m comment --comment "rule to jump traffic destined to POD name:worker-84b7d46d7c-jtd6f namespace: evidscope to chain KUBE-POD-FW-B6B3JDR2V7IJU2QH" -j KUBE-POD-FW-B6B3JDR2V7IJU2QH
[0:0] -A KUBE-ROUTER-OUTPUT -s 10.42.3.4/32 -m comment --comment "rule to jump traffic from POD name:worker-84b7d46d7c-jtd6f namespace: evidscope to chain KUBE-POD-FW-B6B3JDR2V7IJU2QH" -j KUBE-POD-FW-B6B3JDR2V7IJU2QH
[0:0] -A KUBE-ROUTER-OUTPUT -d 10.42.3.9/32 -m comment --comment "rule to jump traffic destined to POD name:network-probe-auditor-run3-nrzq6 namespace: evidscope to chain KUBE-POD-FW-FQHGTNN2G7C3WHYT" -j KUBE-POD-FW-FQHGTNN2G7C3WHYT
[0:0] -A KUBE-ROUTER-OUTPUT -s 10.42.3.9/32 -m comment --comment "rule to jump traffic from POD name:network-probe-auditor-run3-nrzq6 namespace: evidscope to chain KUBE-POD-FW-FQHGTNN2G7C3WHYT" -j KUBE-POD-FW-FQHGTNN2G7C3WHYT
COMMIT
# Completed on Tue Sep  8 08:02:21 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Tue Sep  8 08:02:21 2026
*nat
:PREROUTING ACCEPT [6713:702486]
:INPUT ACCEPT [3886:532866]
:OUTPUT ACCEPT [4855:508346]
:POSTROUTING ACCEPT [8849:771610]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
:FLANNEL-POSTRTG - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SEP-2DEA5CRUMDE56ETQ - [0:0]
:KUBE-SEP-3YLRQZ6UJQXS6T5Q - [0:0]
:KUBE-SEP-5I6E2X5HECKZZRHU - [0:0]
:KUBE-SEP-6BOWLOQOTG7UFDIE - [0:0]
:KUBE-SEP-AHUWE6HMH4Y6LK2D - [0:0]
:KUBE-SEP-DH4WSZP5V6G2BQEQ - [0:0]
:KUBE-SEP-GQFJJFHKHZPIAODM - [0:0]
:KUBE-SEP-HOT2XMKPNFS7SQ2N - [0:0]
:KUBE-SEP-MKXXD25Y7MYIPO4Y - [0:0]
:KUBE-SEP-VC44KZLMZMCM75HL - [0:0]
:KUBE-SEP-YJTIVVULKTVUWPXQ - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-DUF4H3CKWTTFSHUM - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-JD5MR3NA4I4DYORP - [0:0]
:KUBE-SVC-N4CARDNF46WSQ45V - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-QY7SHISHUJKIQVBQ - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:KUBE-SVC-Z4ANX4WAEWEBLCTM - [0:0]
[7903:796895] -A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
[0:0] -A PREROUTING -d 192.168.65.254/32 -j DOCKER_OUTPUT
[4804:505334] -A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
[37:2835] -A OUTPUT -d 192.168.65.254/32 -j DOCKER_OUTPUT
[8761:765763] -A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
[0:0] -A POSTROUTING -d 192.168.65.254/32 -j DOCKER_POSTROUTING
[8761:765763] -A POSTROUTING -m comment --comment "flanneld masq" -j FLANNEL-POSTRTG
[0:0] -A DOCKER_OUTPUT -d 192.168.65.254/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 127.0.0.11:41979
[37:2835] -A DOCKER_OUTPUT -d 192.168.65.254/32 -p udp -m udp --dport 53 -j DNAT --to-destination 127.0.0.11:45643
[0:0] -A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 41979 -j SNAT --to-source 192.168.65.254:53
[0:0] -A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 45643 -j SNAT --to-source 192.168.65.254:53
[0:0] -A FLANNEL-POSTRTG -m mark --mark 0x4000/0x4000 -m comment --comment "flanneld masq" -j RETURN
[2087:148229] -A FLANNEL-POSTRTG -s 10.42.3.0/24 -d 10.42.0.0/16 -m comment --comment "flanneld masq" -j RETURN
[2769:166140] -A FLANNEL-POSTRTG -s 10.42.0.0/16 -d 10.42.3.0/24 -m comment --comment "flanneld masq" -j RETURN
[0:0] -A FLANNEL-POSTRTG ! -s 10.42.0.0/16 -d 10.42.3.0/24 -m comment --comment "flanneld masq" -j RETURN
[0:0] -A FLANNEL-POSTRTG -s 10.42.0.0/16 ! -d 224.0.0.0/4 -m comment --comment "flanneld masq" -j MASQUERADE --random-fully
[0:0] -A FLANNEL-POSTRTG ! -s 10.42.0.0/16 -d 10.42.0.0/16 -m comment --comment "flanneld masq" -j MASQUERADE --random-fully
[0:0] -A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
[66:4660] -A KUBE-POSTROUTING -m mark ! --mark 0x4000/0x4000 -j RETURN
[0:0] -A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
[0:0] -A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE --random-fully
[0:0] -A KUBE-SEP-2DEA5CRUMDE56ETQ -s 10.42.1.17/32 -m comment --comment "evidscope/audit:https" -j KUBE-MARK-MASQ
[0:0] -A KUBE-SEP-2DEA5CRUMDE56ETQ -p tcp -m comment --comment "evidscope/audit:https" -m tcp -j DNAT --to-destination 10.42.1.17:8080
[0:0] -A KUBE-SEP-3YLRQZ6UJQXS6T5Q -s 10.42.0.3/32 -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-MARK-MASQ
[0:0] -A KUBE-SEP-3YLRQZ6UJQXS6T5Q -p tcp -m comment --comment "kube-system/kube-dns:metrics" -m tcp -j DNAT --to-destination 10.42.0.3:9153
[0:0] -A KUBE-SEP-5I6E2X5HECKZZRHU -s 10.42.0.5/32 -m comment --comment "evidscope/audit:https" -j KUBE-MARK-MASQ
[0:0] -A KUBE-SEP-5I6E2X5HECKZZRHU -p tcp -m comment --comment "evidscope/audit:https" -m tcp -j DNAT --to-destination 10.42.0.5:8080
[0:0] -A KUBE-SEP-6BOWLOQOTG7UFDIE -s 172.22.0.3/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
[0:0] -A KUBE-SEP-6BOWLOQOTG7UFDIE -p tcp -m comment --comment "default/kubernetes:https" -m tcp -j DNAT --to-destination 172.22.0.3:6443
[0:0] -A KUBE-SEP-AHUWE6HMH4Y6LK2D -s 10.42.1.3/32 -m comment --comment "evidscope/ingress:https" -j KUBE-MARK-MASQ
[29:1740] -A KUBE-SEP-AHUWE6HMH4Y6LK2D -p tcp -m comment --comment "evidscope/ingress:https" -m tcp -j DNAT --to-destination 10.42.1.3:8080
[0:0] -A KUBE-SEP-DH4WSZP5V6G2BQEQ -s 10.42.0.2/32 -m comment --comment "kube-system/metrics-server:https" -j KUBE-MARK-MASQ
[0:0] -A KUBE-SEP-DH4WSZP5V6G2BQEQ -p tcp -m comment --comment "kube-system/metrics-server:https" -m tcp -j DNAT --to-destination 10.42.0.2:10250
[0:0] -A KUBE-SEP-GQFJJFHKHZPIAODM -s 10.42.0.3/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
[0:0] -A KUBE-SEP-GQFJJFHKHZPIAODM -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.42.0.3:53
[0:0] -A KUBE-SEP-HOT2XMKPNFS7SQ2N -s 10.42.0.3/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
[905:77309] -A KUBE-SEP-HOT2XMKPNFS7SQ2N -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.42.0.3:53
[0:0] -A KUBE-SEP-MKXXD25Y7MYIPO4Y -s 10.42.1.4/32 -m comment --comment "evidscope/vault:https" -j KUBE-MARK-MASQ
[221:13260] -A KUBE-SEP-MKXXD25Y7MYIPO4Y -p tcp -m comment --comment "evidscope/vault:https" -m tcp -j DNAT --to-destination 10.42.1.4:8080
[0:0] -A KUBE-SEP-VC44KZLMZMCM75HL -s 10.42.3.7/32 -m comment --comment "evidscope/ingress:https" -j KUBE-MARK-MASQ
[33:1980] -A KUBE-SEP-VC44KZLMZMCM75HL -p tcp -m comment --comment "evidscope/ingress:https" -m tcp -j DNAT --to-destination 10.42.3.7:8080
[0:0] -A KUBE-SEP-YJTIVVULKTVUWPXQ -s 10.42.3.3/32 -m comment --comment "evidscope/audit:https" -j KUBE-MARK-MASQ
[0:0] -A KUBE-SEP-YJTIVVULKTVUWPXQ -p tcp -m comment --comment "evidscope/audit:https" -m tcp -j DNAT --to-destination 10.42.3.3:8080
[0:0] -A KUBE-SERVICES -d 10.43.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
[6:510] -A KUBE-SERVICES -d 10.43.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
[0:0] -A KUBE-SERVICES -d 10.43.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
[0:0] -A KUBE-SERVICES -d 10.43.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-SVC-JD5MR3NA4I4DYORP
[0:0] -A KUBE-SERVICES -d 10.43.42.191/32 -p tcp -m comment --comment "kube-system/metrics-server:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-Z4ANX4WAEWEBLCTM
[2:120] -A KUBE-SERVICES -d 10.43.180.222/32 -p tcp -m comment --comment "evidscope/vault:https cluster IP" -m tcp --dport 8080 -j KUBE-SVC-DUF4H3CKWTTFSHUM
[0:0] -A KUBE-SERVICES -d 10.43.223.167/32 -p tcp -m comment --comment "evidscope/ingress:https cluster IP" -m tcp --dport 8080 -j KUBE-SVC-QY7SHISHUJKIQVBQ
[0:0] -A KUBE-SERVICES -d 10.43.22.16/32 -p tcp -m comment --comment "evidscope/audit:https cluster IP" -m tcp --dport 8080 -j KUBE-SVC-N4CARDNF46WSQ45V
[8:1588] -A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
[0:0] -A KUBE-SVC-DUF4H3CKWTTFSHUM ! -s 10.42.0.0/16 -d 10.43.180.222/32 -p tcp -m comment --comment "evidscope/vault:https cluster IP" -m tcp --dport 8080 -j KUBE-MARK-MASQ
[221:13260] -A KUBE-SVC-DUF4H3CKWTTFSHUM -m comment --comment "evidscope/vault:https -> 10.42.1.4:8080" -j KUBE-SEP-MKXXD25Y7MYIPO4Y
[0:0] -A KUBE-SVC-ERIFXISQEP7F7OF4 ! -s 10.42.0.0/16 -d 10.43.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-MARK-MASQ
[0:0] -A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp -> 10.42.0.3:53" -j KUBE-SEP-GQFJJFHKHZPIAODM
[0:0] -A KUBE-SVC-JD5MR3NA4I4DYORP ! -s 10.42.0.0/16 -d 10.43.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-MARK-MASQ
[0:0] -A KUBE-SVC-JD5MR3NA4I4DYORP -m comment --comment "kube-system/kube-dns:metrics -> 10.42.0.3:9153" -j KUBE-SEP-3YLRQZ6UJQXS6T5Q
[0:0] -A KUBE-SVC-N4CARDNF46WSQ45V ! -s 10.42.0.0/16 -d 10.43.22.16/32 -p tcp -m comment --comment "evidscope/audit:https cluster IP" -m tcp --dport 8080 -j KUBE-MARK-MASQ
[0:0] -A KUBE-SVC-N4CARDNF46WSQ45V -m comment --comment "evidscope/audit:https -> 10.42.0.5:8080" -m statistic --mode random --probability 0.33333333349 -j KUBE-SEP-5I6E2X5HECKZZRHU
[0:0] -A KUBE-SVC-N4CARDNF46WSQ45V -m comment --comment "evidscope/audit:https -> 10.42.1.17:8080" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-2DEA5CRUMDE56ETQ
[0:0] -A KUBE-SVC-N4CARDNF46WSQ45V -m comment --comment "evidscope/audit:https -> 10.42.3.3:8080" -j KUBE-SEP-YJTIVVULKTVUWPXQ
[0:0] -A KUBE-SVC-NPX46M4PTMTKRN6Y ! -s 10.42.0.0/16 -d 10.43.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
[0:0] -A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https -> 172.22.0.3:6443" -j KUBE-SEP-6BOWLOQOTG7UFDIE
[0:0] -A KUBE-SVC-QY7SHISHUJKIQVBQ ! -s 10.42.0.0/16 -d 10.43.223.167/32 -p tcp -m comment --comment "evidscope/ingress:https cluster IP" -m tcp --dport 8080 -j KUBE-MARK-MASQ
[29:1740] -A KUBE-SVC-QY7SHISHUJKIQVBQ -m comment --comment "evidscope/ingress:https -> 10.42.1.3:8080" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-AHUWE6HMH4Y6LK2D
[33:1980] -A KUBE-SVC-QY7SHISHUJKIQVBQ -m comment --comment "evidscope/ingress:https -> 10.42.3.7:8080" -j KUBE-SEP-VC44KZLMZMCM75HL
[0:0] -A KUBE-SVC-TCOU7JCQXEZGVUNU ! -s 10.42.0.0/16 -d 10.43.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-MARK-MASQ
[905:77309] -A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns -> 10.42.0.3:53" -j KUBE-SEP-HOT2XMKPNFS7SQ2N
[0:0] -A KUBE-SVC-Z4ANX4WAEWEBLCTM ! -s 10.42.0.0/16 -d 10.43.42.191/32 -p tcp -m comment --comment "kube-system/metrics-server:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
[0:0] -A KUBE-SVC-Z4ANX4WAEWEBLCTM -m comment --comment "kube-system/metrics-server:https -> 10.42.0.2:10250" -j KUBE-SEP-DH4WSZP5V6G2BQEQ
COMMIT
# Completed on Tue Sep  8 08:02:21 2026
